--- a/style-firstp.css
+++ b/style-firstp.css
@@ -13,11 +13,11 @@ body{
     align-items: center;
     justify-content: space-between;
 }
-/* 
+
 img{
     display: block;
     max-width: 100%;
-} */
+}
 
 section{
     height: 90vh;
